2014-11-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-6
	* R/lokerns.R (lines.KernS): simple method added

2013-11-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lokerns.R (predict.KernS): fix for "interesting" case;
	* man/KernS-methods.Rd: also update documentation and add
	"regression" test.

	* DESCRIPTION (Version): 1.1-5

2013-04-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	From -fbounds-check s:
	* src/auxkerns.f (kerncl): ist=0 is "ok" for s(0:n) but not x(1:n)
	* src/auxkerns.f (kernel, smo,..),
	* R/glkerns.R, R/lokerns.R (glkerns, lokerns): new argument 'trace.lev'
	for some algorithm tracing.

2012-11-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/glk1.R: demo(*, ask = FALSE) at least when run as 'check'

	* DESCRIPTION (Version): 1.1-4

2011-11-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-3
	Imports: sfsmisc (instead of depends)

	* NAMESPACE: added

2010-09-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-2

	* R/lokerns.R (.lokerns), src/lokerns.f: make 'est' the 4th arg.
	(lokerns): fix 'x.out' bug; the same for glkerns().

	* R/glkerns.R (.glkerns), src/glkerns.f: make 'est' the 4th arg.

2010-09-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-1

	* R/glkerns.R (.glkerns): factored out of glkerns();
	* R/lokerns.R (.lokerns): factored out, to be used in
	* R/lokerns.R (predict.KernS): now work for all 'x' and different
	deriv.

2010-09-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 1.1-0

	* R/glkerns.R (glkerns): return "kernS" class;
	* tests/glk1.R: adapt to new result class.

2010-08-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lokerns.R (lokerns): return "kernS"; print() etc methods.

	* DESCRIPTION (Depends): sfsmisc, so we can provide nice predict() etc

2010-03-02  Martin Maechler  <maechler@stat.math.ethz.ch>
